--- a/ML_Assignment2.ipynb
+++ b/ML_Assignment2.ipynb
@@ -533,6 +533,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pruebas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
