Espanya ens roba

--- a/ML_Assignment2.ipynb
+++ b/ML_Assignment2.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +60,11 @@
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "from dateutil.parser import parse \n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "\n",
     "# Machine Learning libraries\n",
     "import statsmodels.api as sm\n",
@@ -74,7 +79,10 @@
     "# Others\n",
     "import math\n",
     "from mltools import forecast_tools as FT\n",
-    "import scipy.stats as st"
+    "import scipy.stats as st\n",
+    "from mltools import model_tools as MT\n",
+    "from neuralsens import partial_derivatives as ns\n",
+    "from mltools import regression_tools as RT"
    ]
   },
   {
@@ -1874,6 +1882,287 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    274.000000\n",
+       "mean       0.000000\n",
+       "std        0.270666\n",
+       "min       -1.000000\n",
+       "25%        0.000000\n",
+       "50%        0.000000\n",
+       "75%        0.000000\n",
+       "max        1.000000\n",
+       "Name: COVID, dtype: float64"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['COVID'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUTS = 'COVID'\n",
+    "OUTPUT = 'TOTAL'\n",
+    "\n",
+    "# We have categorical inputs with many classes. We will create dummy variables automatically after\n",
+    "X = df[INPUTS]\n",
+    "y = df[OUTPUT]\n",
+    "\n",
+    "## Divide the data into training and test sets SEQUENTIALY -------------------------------------\n",
+    "# Create random 80/20 % split\n",
+    "X_train2 = X.iloc[0:round(0.64*y.shape[0])]\n",
+    "X_test2 = X.iloc[round(0.64*y.shape[0])+1:round(0.8*y.shape[0])]\n",
+    "y_train = y.iloc[0:round(0.64*y.shape[0])]\n",
+    "y_test = y.iloc[round(0.64*y.shape[0])+1:round(0.8*y.shape[0])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###Include lagged variables\n",
+    "dfT = df[['TOTAL','COVID']].copy()\n",
+    "dfT['TOTAL_lag1'] = dfT['TOTAL'].shift()\n",
+    "dfT['TOTAL_lag2'] = dfT['TOTAL'].shift(2)\n",
+    "dfT['TOTAL_lag3'] = dfT['TOTAL'].shift(12)\n",
+    " \n",
+    "dfT.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove missing\n",
+    "dfT.dropna(inplace=True)\n",
+    "dfT.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define input and output matrices\n",
+    "INPUTS = ['TOTAL_lag1','TOTAL_lag2','TOTAL_lag3', 'COVID']\n",
+    "OUTPUT = 'TOTAL'\n",
+    "\n",
+    "# We have categorical inputs with many classes. We will create dummy variables automatically after\n",
+    "X = dfT[INPUTS]\n",
+    "y = dfT[OUTPUT]\n",
+    "\n",
+    "## Divide the data into training and test sets SEQUENTIALY -------------------------------------\n",
+    "# Create random 80/20 % split\n",
+    "X_train = X.iloc[0:round(0.64*y.shape[0])]\n",
+    "X_test = X.iloc[round(0.64*y.shape[0])+1:round(0.8*y.shape[0])]\n",
+    "y_train = y.iloc[0:round(0.64*y.shape[0])]\n",
+    "y_test = y.iloc[round(0.64*y.shape[0])+1:round(0.8*y.shape[0])]\n",
+    "\n",
+    "\n",
+    "## Create dataset to store model predictions\n",
+    "dfTR_eval = X_train.copy()\n",
+    "dfTR_eval['TOTAL'] = y_train # We will call Y as output variable for simplicity\n",
+    "dfTS_eval = X_test.copy()\n",
+    "dfTS_eval['TOTAL'] = y_test # We will call Y as output variable for simplicity\n",
+    "\n",
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train['COVID'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#------------------------------- MLP Regression MODEL -------------------------------------------------\n",
+    "## Inputs of the model. Change accordingly to perform variable selection\n",
+    "INPUTS_MLP_NUM = ['TOTAL_lag1','TOTAL_lag2','TOTAL_lag3', 'COVID']\n",
+    "INPUTS_MLP_CAT = [] #Weekday is numerical in this case - Intervention variables\n",
+    "INPUTS_MLP = INPUTS_MLP_NUM + INPUTS_MLP_CAT\n",
+    "\n",
+    "numeric_transformer = Pipeline(steps=[('scaler', StandardScaler())])\n",
+    "\n",
+    "# Create a preprocessor to perform the steps defined above\n",
+    "preprocessor = ColumnTransformer(transformers=[\n",
+    "        ('num', numeric_transformer, INPUTS_MLP_NUM)\n",
+    "        ])\n",
+    "\n",
+    "param = {'MLP__alpha': [0.001,0.01,0.1,1,10,100], # Initial value of regularization\n",
+    "         'MLP__hidden_layer_sizes':[(3,),(5,),(8,),(10,),(15,)]} # Number of neurons in each hidden layer, enters as tuples\n",
+    "\n",
+    "pipe = Pipeline([\n",
+    "        ('preprocessor', preprocessor),\n",
+    "        ('MLP', MLPRegressor(solver='lbfgs', # Update function\n",
+    "                activation='logistic', # Logistic sigmoid activation function\n",
+    "                max_iter=450, # Maximum number of iterations\n",
+    "                tol=1e-4, # Tolerance for the optimization\n",
+    "                random_state=150,\n",
+    "                verbose = True))]) # For replication\n",
+    "\n",
+    "# We use Grid Search Cross Validation to find the best parameter for the model in the grid defined \n",
+    "nFolds = 10\n",
+    "MLP_fit = GridSearchCV(estimator=pipe, # Structure of the model to use\n",
+    "                       param_grid=param, # Defined grid to search in\n",
+    "                       n_jobs=-1, # Number of cores to use (parallelize)\n",
+    "                       scoring='neg_mean_squared_error', # RMSE https://scikit-learn.org/stable/modules/model_evaluation.html\n",
+    "                       cv=nFolds) # Number of Folds \n",
+    "MLP_fit.fit(X_train[INPUTS_MLP], y_train) # Search in grid\n",
+    "print(\"MLP Trained\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the cross validation score in the Grid Search\n",
+    "MT.plotModelGridError(MLP_fit, xscale=\"log\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SENSITIVITY ANALYSIS\n",
+    "mlp = MLP_fit.best_estimator_['MLP']\n",
+    "wts = mlp.coefs_\n",
+    "bias = mlp.intercepts_\n",
+    "actfunc = ['identity',MLP_fit.best_estimator_['MLP'].get_params()['activation'],mlp.out_activation_]\n",
+    "X = MLP_fit.best_estimator_['preprocessor'].transform(X_train) # Preprocess the variables\n",
+    "coefnames = MLP_fit.best_estimator_['preprocessor'].get_feature_names_out(INPUTS_MLP)\n",
+    "\n",
+    "X = pd.DataFrame(X, columns=coefnames)\n",
+    "y = pd.DataFrame(y_train, columns=['Y'])\n",
+    "sens_end_layer = 'last'\n",
+    "sens_end_input = False\n",
+    "sens_origin_layer = 0\n",
+    "sens_origin_input = True\n",
+    "\n",
+    "#Compute sensitivities\n",
+    "sensmlp = ns.jacobian_mlp(wts, bias, actfunc, X, y)\n",
+    "sensmlp.summary()\n",
+    "#sensmlp.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sensmlp.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Obtain a report of the model based on predictions ---------------------------------------------\n",
+    "dfTR_eval['MLP_pred'] = MLP_fit.predict(X_train)\n",
+    "### Scale test using preprocess in training\n",
+    "dfTS_eval['MLP_pred'] = MLP_fit.predict(X_test)\n",
+    "\n",
+    "#Training and test MAE - Mean Absolute error\n",
+    "print('Training MAE:',mean_absolute_error(dfTR_eval['TOTAL'], dfTR_eval['MLP_pred']))\n",
+    "print('Test MAE:',mean_absolute_error(dfTS_eval['TOTAL'], dfTS_eval['MLP_pred']))\n",
+    "#Training and test RMSE - Root Mean Square Error\n",
+    "print('Training RMSE:',math.sqrt(mean_squared_error(dfTR_eval['TOTAL'], dfTR_eval['MLP_pred'])))\n",
+    "print('Test RMSE:',math.sqrt(mean_squared_error(dfTS_eval['TOTAL'], dfTS_eval['MLP_pred'])))\n",
+    "#Training and test r^2 \n",
+    "print('Training R2:',r2_score(dfTR_eval['TOTAL'], dfTR_eval['MLP_pred']))\n",
+    "print('Test R2:',r2_score(dfTS_eval['TOTAL'], dfTS_eval['MLP_pred']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Plot predictions of the model\n",
+    "sns.scatterplot(x='TOTAL_lag1', y='TOTAL', data=dfTR_eval, color='black', alpha=0.5)\n",
+    "sns.scatterplot(x='TOTAL_lag1', y='MLP_pred', data=dfTR_eval, color='red', edgecolor='black').set_title('Predictions for training data')\n",
+    "plt.show()\n",
+    "plt.figure() # Needed to plot two separated plots instead of two overlapped\n",
+    "sns.scatterplot(x='TOTAL_lag1', y='TOTAL', data=dfTS_eval, color='black', alpha=0.5)\n",
+    "sns.scatterplot(x='TOTAL_lag1', y='MLP_pred', data=dfTS_eval, color='red', edgecolor='black').set_title('Predictions for training data')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Analysis of residuals\n",
+    "RT.plotModelDiagnosis(dfTR_eval, 'MLP_pred', 'TOTAL',figsize=[15,15])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize prediction with respect to output\n",
+    "sns.scatterplot(data=dfTS_eval, x='TOTAL', y='TOTAL', color='black', alpha=0.5)\n",
+    "sns.scatterplot(data=dfTS_eval, x='MLP_pred', y='TOTAL', color='blue', edgecolor='black')\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check correlation of residuals\n",
+    "FT.ts_display(dfTS_eval['TOTAL'] - dfTS_eval['MLP_pred'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1883,7 +2172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1901,5 +2190,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
